Fix spacing issues on mobile

--- a/version_control/Codurance_September2020/css/modules/embedded-video.css
+++ b/version_control/Codurance_September2020/css/modules/embedded-video.css
@@ -17,6 +17,13 @@
   margin-top: 20px;
 }
 
+{% call utils.small()%}
+  .embed-video__heading {
+    {{ utils.freed() }}
+ 
+  }
+{% endcall %}
+
 .embed-video__video {
   margin: 40px auto 0;
   max-width: 800px;
